# tradeaxis

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: showcase.ipynb
src/tradeaxis/: __init__.py  _artists.py  _decimation.py  _interaction.py  _mapping.py  chart.py
tests/: test_chart.py  test_decimation.py  test_interaction.py  test_mapping.py
