[tool.poetry]
name = "tradeaxis"
version = "0.1.0"
description = "Matplotlib with market-microstructure sanity: gap compression, LOD decimation, and trader-style interaction."
authors = ["Samay Panwar <samaybhuvi@gmail.com>"]
packages = [{ include = "tradeaxis", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.24"
matplotlib = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
jupyter = "^1.0"
ipykernel = "^7.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

